# matrix-dart-sdk

./: .codecov.yaml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  _config.yml  analysis_options.yaml  curations.yml  dart_dependency_validator.yaml  dart_test.yaml  flake.nix  flutter_rust_bridge.yaml  prepare.sh  pub.ort.yml  pubspec.yaml  security.md  sonar-project.properties  test.sh  test_driver.sh
.config/: filegen-manifest.json
.github/: dependabot.yml
.gitlab/: CODEOWNERS
doc/: book.toml  calling.md  commands.md  end-to-end-encryption.md  get-started.md  mermaid.css  oidc-login.md  trust-on-first-use.md  web.md
example/: .metadata  README.md  analysis_options.yaml  main.dart  matrix_api_lite_example.dart  pubspec.yaml
home/: index.html
lib/: encryption.dart  fake_matrix_api.dart  famedlysdk.dart  matrix.dart  matrix_api.dart  matrix_api_lite.dart  widget.dart
rust/: .gitignore  Cargo.toml
rust/src/: bindings.rs  frb_generated.rs  lib.rs
scripts/: add_license_headers.sh  coverage.sh  extract_changelog.sh  integration-create-environment-variables.sh  integration-prepare-alpine.sh  integration-prepare-homeserver.sh  integration-server-conduit.sh  integration-server-dendrite.sh  integration-server-synapse.sh  prepare.sh  prepare_vodozemac.sh  publish.sh  test.sh  test_driver.sh  test_monitor.dart
test/: ChatTime_test.dart  Client_test.dart  Event_test.dart  FakeMatrixApi.dart  MxContent_test.dart  Presence_test.dart  PushRules_test.dart  Room_test.dart  (+70 more)
(+565 files in other folders)
